Updates the toolbar nav to reflect the latest doc URLs.

--- a/jekyll-site-src/_includes/toolbar-nav.html
+++ b/jekyll-site-src/_includes/toolbar-nav.html
@@ -5,18 +5,18 @@ TODO(shyndman): This should be data driven.
 <nav class="toolbar-nav">
   <ul class="toolbar-nav__links">
     <li>
-      <a class="toolbar-nav-link" href="{{ page.basepath }}/howto/">
-        <span class="toolbar-nav-link__text">How To</span>
+      <a class="toolbar-nav-link" href="{{ page.basepath }}/docs/">
+        <span class="toolbar-nav-link__text">Docs</span>
       </a>
     </li>
     <li>
-      <a class="toolbar-nav-link" href="{{ page.basepath }}/components/">
+      <a class="toolbar-nav-link" href="{{ page.basepath }}/listing.html">
         <span class="toolbar-nav-link__text">Components</span>
       </a>
     </li>
     <li>
-      <a class="toolbar-nav-link" href="{{ page.basepath }}/contributing/">
-        <span class="toolbar-nav-link__text">Contributing</span>
+      <a class="toolbar-nav-link" href="{{ page.repo_url }}">
+        <span class="toolbar-nav-link__text">View on GitHub</span>
       </a>
     </li>
   </ul>
