--- a/jekyll-site-src/_includes/drawer.html
+++ b/jekyll-site-src/_includes/drawer.html
@@ -1,7 +1,7 @@
 <nav class="mdc-permanent-drawer">
   <ul class="drawer-list">
     {% for nav_item in page.navigation %}
-      {% include drawer-list-item.html nav_item=nav_item %}
+      {% include drawer-nav-item.html nav_item=nav_item %}
     {% endfor %}
   </ul>
 </nav>
