--- a/jekyll-site-src/_css_src/components/_component-list.scss
+++ b/jekyll-site-src/_css_src/components/_component-list.scss
@@ -4,15 +4,27 @@
 }
 
 .component-list-item {
-  width: 100%;
-  margin-right: 16px;
+  display: inline-flex;
+  width: calc(50% - 100px);
+  margin-bottom: 64px;
 
   &::before {
     content: '';
     display: inline-block;
-    width: 80px;
+
+    min-width: 80px;
     height: 80px;
+    margin-right: 48px;
+
     background-image: url('/images/component_icons/ic_component_24px.svg');
     background-size: cover;
+  }
+
+  &:nth-child(2n + 1) {
+    margin-right: 200px;
+  }
+
+  &__title {
+    margin-top: 0 !important;
   }
 }
