--- a/jekyll-site-src/_includes/toolbar-nav.html
+++ b/jekyll-site-src/_includes/toolbar-nav.html
@@ -5,17 +5,17 @@ TODO(shyndman): This should be data driven.
 <nav class="toolbar-nav">
   <ul class="toolbar-nav__links">
     <li>
-      <a href="{{ page.basepath }}/docs/"
-         class="toolbar-nav-link
-             {% if page.section == 'docs' %}toolbar-nav-link--active{% endif %}">
-        <span class="toolbar-nav-link__text">Docs</span>
-      </a>
-    </li>
-    <li>
       <a href="{{ page.basepath }}/listing.html"
          class="toolbar-nav-link
              {% if page.section == 'components' %}toolbar-nav-link--active{% endif %}">
         <span class="toolbar-nav-link__text">Components</span>
+      </a>
+    </li>
+    <li>
+      <a href="{{ page.basepath }}/docs/"
+         class="toolbar-nav-link
+             {% if page.section == 'docs' %}toolbar-nav-link--active{% endif %}">
+        <span class="toolbar-nav-link__text">Documentation</span>
       </a>
     </li>
     <li>
