Adds three new component icons.
* Animation
* Progress Linear
* Shadows

--- a/jekyll-site-src/_css_src/components/_component-icons.scss
+++ b/jekyll-site-src/_css_src/components/_component-icons.scss
@@ -1,5 +1,6 @@
 // From: material-components-site-generator/jekyll-site-src/images/component_icons/
 $icon-ids:
+  'animation',
   'bottom_navigation',
   'bottom_sheet',
   'button',
@@ -14,10 +15,12 @@ $icon-ids:
   'list',
   'menu',
   'progress_activity',
+  'progress_linear',
   'radio_button',
   'responsive_layout',
   'ripple',
   'selection_control',
+  'shadow',
   'side_navigation',
   'slider',
   'stepper',
