Adds a top-level component directory (/catalog).

--- a/jekyll-site-src/_includes/toolbar-nav.html
+++ b/jekyll-site-src/_includes/toolbar-nav.html
@@ -5,7 +5,7 @@ TODO(shyndman): This should be data driven.
 <nav class="toolbar-nav">
   <ul class="toolbar-nav__links">
     <li>
-      <a href="{{ page.basepath }}/listing.html"
+      <a href="{{ page.basepath }}/catalog/"
          class="toolbar-nav-link
              {% if page.section == 'components' %}toolbar-nav-link--active{% endif %}">
         <span class="toolbar-nav-link__text">Components</span>
