Renamed welcome svg to welcome-ios, and added new root welcome.

--- a/jekyll-site-src/_css_src/components/_welcome.scss
+++ b/jekyll-site-src/_css_src/components/_welcome.scss
@@ -6,7 +6,7 @@
 
   &__content {
     height: 640px - $toolbar-height;
-    background: right -80px/800px url("/images/welcome.svg") no-repeat;
+    background: right -80px/800px url("/images/welcome-ios.svg") no-repeat;
   }
 
   &__title {
