--- a/jekyll-site-src/_css_src/components/_toolbar.scss
+++ b/jekyll-site-src/_css_src/components/_toolbar.scss
@@ -24,7 +24,7 @@
   }
 
   &__row {
-    max-width: $content-width + nth($mdc-toolbar-padding, 2) * 2;
+    @include content-element;
     height: $toolbar-height;
   }
 
