--- a/jekyll-site-src/_includes/toolbar-nav.html
+++ b/jekyll-site-src/_includes/toolbar-nav.html
@@ -1,23 +1,21 @@
-{% comment %}
-TODO(shyndman): Move this over to mdc-tabs when they're complete.
-TODO(shyndman): This should be data driven.
-{% endcomment %}
 <nav class="toolbar-nav">
   <ul class="toolbar-nav__links">
-    <li>
-      <a href="{{ page.basepath }}/catalog/"
-         class="toolbar-nav-link
-             {% if page.section == 'components' %}toolbar-nav-link--active{% endif %}">
-        <span class="toolbar-nav-link__text">Components</span>
-      </a>
-    </li>
-    <li>
-      <a href="{{ page.basepath }}/docs/"
-         class="toolbar-nav-link
-             {% if page.section == 'docs' %}toolbar-nav-link--active{% endif %}">
-        <span class="toolbar-nav-link__text">Documentation</span>
-      </a>
-    </li>
+    {% unless include.github_only %}
+      <li>
+        <a href="{{ page.basepath }}/catalog/"
+           class="toolbar-nav-link
+               {% if page.section == 'components' %}toolbar-nav-link--active{% endif %}">
+          <span class="toolbar-nav-link__text">Components</span>
+        </a>
+      </li>
+      <li>
+        <a href="{{ page.basepath }}/docs/"
+           class="toolbar-nav-link
+               {% if page.section == 'docs' %}toolbar-nav-link--active{% endif %}">
+          <span class="toolbar-nav-link__text">Documentation</span>
+        </a>
+      </li>
+    {% endunless %}
     <li>
       <a href="{{ page.repo_url }}"
          class="toolbar-nav-link">
