--- a/jekyll-site-src/_css_src/_constants.scss
+++ b/jekyll-site-src/_css_src/_constants.scss
@@ -5,9 +5,9 @@ $black-20: rgba(0, 0, 0, 0.20);
 $black-54: rgba(0, 0, 0, 0.54);
 $black-87: rgba(0, 0, 0, 0.87);
 $black: #000;
-$brown-200: #BCAAA4;
-$brown-400: #8D6E63;
-$green-a700: #00C853;
+$brown-200: #bcaaa4;
+$brown-400: #8d6e63;
+$green-a700: #00c853;
 $grey-50: #fafafa;
 $grey-100: #f5f5f5;
 $grey-300: #e0e0e0;
@@ -15,10 +15,10 @@ $grey-400: #bdbdbd;
 $grey-600: #757575;
 $grey-800: #424242;
 $grey-900: #212121;
-$indigo-500: #3F51B5;
-$light-blue-500: #03A9F4;
-$pink-900: #880E4F;
-$teal-400: #26A69A;
+$indigo-500: #3f51b5;
+$light-blue-500: #03a9f4;
+$pink-900: #880e4f;
+$teal-400: #26a69a;
 $white-50: rgba(255, 255, 255, .5);
 $white: #fff;
 
