Adds promotional "benefits list" styling.

--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -13,6 +13,7 @@
 // Site
 @import 'base';
 @import 'components/article';
+@import 'components/benefits-list';
 @import 'components/code';
 @import 'components/component-icons';
 @import 'components/component-list';
