Adds a beautiful root homepage.

--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -22,5 +22,7 @@
 @import 'components/hidden-mark';
 @import 'components/icon-list';
 @import 'components/layout';
+@import 'components/platform-link-list';
+@import 'components/root-homepage';
 @import 'components/toolbar';
 @import 'components/welcome';
