--- a/jekyll-site-src/_css_src/components/_layout.scss
+++ b/jekyll-site-src/_css_src/components/_layout.scss
@@ -3,6 +3,9 @@
 
   display: flex;
   align-items: stretch;
-
   margin-top: 78px + $toolbar-height;
+
+  &--dense {
+    margin-top: 56px + $toolbar-height;
+  }
 }
