--- a/jekyll-site-src/_css_src/components/_toolbar.scss
+++ b/jekyll-site-src/_css_src/components/_toolbar.scss
@@ -11,7 +11,7 @@
   z-index: 3;
 
   &__title {
-    background: no-repeat left/contain url('/images/mdc-logo.svg');
+    background: no-repeat left/40px url('/images/mdc-logo.svg');
     font-family: $ui-font-family;
     height: 32px;
     padding: 2px 0 5px 50px;
