--- a/jekyll-site-src/_includes/footer.html
+++ b/jekyll-site-src/_includes/footer.html
@@ -1,4 +1,5 @@
-<footer class="footer">
+<footer class="footer
+    {% if include.is_dense == true %}footer--dense{% endif %}">
   <div class="footer__content">
     <a class="footer__logo" href="https://www.google.com" target="_blank"></a>
     <ul class="footer__links">
