--- a/jekyll-site-src/_includes/welcome.html
+++ b/jekyll-site-src/_includes/welcome.html
@@ -1,7 +1,20 @@
-<section class="welcome">
+<section class="welcome
+    {% if include.is_root == true %}welcome--root{% endif %}">
   <div class="welcome__content">
-    <h1 class="welcome__title">
-      {{ page.site_title }}
-    </h1>
+    <div class="welcome__text">
+      <h1 class="welcome__title">
+        {{ page.site_title }}
+      </h1>
+      {% if include.is_root == true %}
+        <h2 class="welcome__blurb">
+          Create beautiful apps with modular and customizable UI components.
+        </h2>
+        <ul class="welcome__platforms platform-link-list">
+          <li class="platform-link-list-item"><a href="ios/">iOS</a></li>
+          <li class="platform-link-list-item"><a href="android/">ANDROID</a></li>
+          <li class="platform-link-list-item"><a href="web/">WEB</a></li>
+        </ul>
+      {% endif %}
+    </div>
   </div>
 </section>
