--- a/jekyll-site-src/_css_src/components/_code.scss
+++ b/jekyll-site-src/_css_src/components/_code.scss
@@ -2,7 +2,7 @@
 $code-background-color: $black-05;
 $code-divider-color: $black-10;
 $code-font-family: 'Roboto Mono', monospace;
-$code-text-color: $black-54;
+$code-text-color: $black;
 $code-text-size: 12px;
 $code-text-weight: 500;
 $code-lineheight: 20px;
@@ -12,7 +12,7 @@ $code-lineheight: 20px;
   font-weight: $code-text-weight;
   font-size: $code-text-size;
   line-height: $code-lineheight;
-  color: $code-text-color
+  color: $code-text-color;
 }
 
 .CodeMirror {
@@ -58,13 +58,16 @@ pre.CodeMirror-line {
   padding-left: 0;
 }
 
-
 // Syntax highlight colors
 .CodeMirror {
-  .cm-keyword, .cm-variable-3 {
+  .cm-keyword,
+  .cm-variable-3 {
     color: $pink-900;
   }
-  .cm-def, .cm-userpath, .cm-string, .cm-atom {
+  .cm-def,
+  .cm-userpath,
+  .cm-string,
+  .cm-atom {
     color: $brown-400;
   }
   .cm-comment {
@@ -73,8 +76,9 @@ pre.CodeMirror-line {
 }
 
 .CodeMirror .hll {
-  .CodeMirror-linenumber.CodeMirror-gutter-elt,  .CodeMirror-line {
-    background-color: #EEEEEE;
+  .CodeMirror-linenumber.CodeMirror-gutter-elt,
+  .CodeMirror-line {
+    background-color: #eeeeee;
   }
 }
 
@@ -85,7 +89,8 @@ pre.CodeMirror-line {
 
   // Hide any headings that were used for annotating code
   // in the github version of markdown.
-  h3, h4 {
+  h3,
+  h4 {
     display: none;
   }
 
@@ -96,42 +101,10 @@ pre.CodeMirror-line {
     font-weight: 400;
     line-height: 24px;
     color: $code-text-color;
+  }
 
-    .radio {
-      margin-right: 16px;
-      padding: 8px 8px 8px 0;
-
-      input[type=radio] {
-        display: none;
-      }
-      .source-radio {
-        height: 24px;
-        width: 24px;
-        vertical-align: bottom;
-        margin-right: 8px;
-        background-repeat: no-repeat;
-        background-size: 24px 24px;
-        background-position: center;
-
-        &.checked {
-          background-image: url('/images/radio-checked.svg');
-          display: none;
-        }
-        &.unchecked {
-          background-image: url('/images/radio-unchecked.svg');
-          opacity: 0.54;
-          display: inline-block;
-        }
-      }
-      input[type=radio]:checked+.icons .source-radio{
-        &.checked {
-          display: inline-block;
-        }
-        &.unchecked {
-          display: none;
-        }
-      }
-    }
+  .mdc-form-field {
+    margin-right: 24px;
   }
 }
 
