Further improves code styling.

--- a/jekyll-site-src/_includes/head.html
+++ b/jekyll-site-src/_includes/head.html
@@ -24,7 +24,7 @@
   <meta name="msapplication-TileImage" content="https://material.io/static/images/hub/favicons/hub-ms-icon-144x144.png">
   <meta name="msapplication-tap-highlight" content="no">
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500|Roboto+Mono" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500|Roboto+Mono:400,500" rel="stylesheet" type="text/css">
   <!-- TODO(shyndman): Merge these stylesheets together -->
   <link rel="stylesheet" href="/css/codemirror.css">
   <link rel="stylesheet" href="/css/app.css">
