Finalizes styling of component list page.

--- a/jekyll-site-src/_css_src/_mixins.scss
+++ b/jekyll-site-src/_css_src/_mixins.scss
@@ -26,6 +26,12 @@
   }
 }
 
+@mixin media-phone {
+  @include breakpoint($max: 720px) {
+    @content;
+  }
+}
+
 @mixin link-styles {
   &,
   &:link,
