--- a/jekyll-site-src/_css_src/components/_component-icons.scss
+++ b/jekyll-site-src/_css_src/components/_component-icons.scss
@@ -45,7 +45,7 @@ $icon-ids:
 
 @each $icon-id in $icon-ids {
   .components.detail .article.article--icon-#{$icon-id} h1::before,
-  .components .component-list-item--icon-#{$icon-id}::before {
+  .components .component-list-item--icon-#{$icon-id} > .component-list-item__link::before {
     background-image: url('/images/component_icons/ic_#{$icon-id}_24px.svg');
   }
 }
