--- a/jekyll-site-src/_css_src/components/_layout.scss
+++ b/jekyll-site-src/_css_src/components/_layout.scss
@@ -8,4 +8,8 @@
   &--dense {
     margin-top: 56px + $toolbar-height;
   }
+
+  @include media-phone {
+    margin-top: 32px + $toolbar-height;
+  }
 }
