--- a/jekyll-site-src/_css_src/components/_toolbar.scss
+++ b/jekyll-site-src/_css_src/components/_toolbar.scss
@@ -13,6 +13,7 @@
   &__title {
     background: no-repeat left/40px url('/images/mdc-logo.svg');
     font-family: $ui-font-family;
+    font-weight: 400;
     height: 32px;
     padding: 2px 0 5px 50px;
     text-transform: uppercase;
