Adds footer styling for mobile.

--- a/jekyll-site-src/_css_src/components/_footer.scss
+++ b/jekyll-site-src/_css_src/components/_footer.scss
@@ -44,4 +44,19 @@
     color: $black-54;
     text-decoration: none;
   }
+
+  @include media-phone {
+    height: 114px;
+
+    &__content {
+      padding-bottom: 12px;
+      padding-top: 24px;
+    }
+
+    &__link {
+      @include link-styles {
+        font-size: .75rem;
+      }
+    }
+  }
 }
