--- a/jekyll-site-src/_layouts/homepage.html
+++ b/jekyll-site-src/_layouts/homepage.html
@@ -2,7 +2,10 @@
 <html class="mdc-typography">
   {% include head.html %}
   <body id="homepage" class="mdc-typography">
-    {% include toolbar.html title="Material Components" title_link="../" %}
+    {% include toolbar.html
+        title="Material Components"
+        title_link="../"
+        no_shadow=true %}
     {% include welcome.html %}
 
     <div class="page-content">
