Makes "page" a component.
Page layouts and sections are now modifiers on the component. Page
content and flexible regions are elements.

This has the added benefit of sticking the footer to the bottom of the
page.

--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -21,8 +21,7 @@
 @import 'components/footer';
 @import 'components/hidden-mark';
 @import 'components/icon-list';
-@import 'components/layout';
+@import 'components/page';
 @import 'components/platform-link-list';
-@import 'components/root-homepage';
 @import 'components/toolbar';
 @import 'components/welcome';
