--- a/jekyll-site-src/_css_src/components/_component-icons.scss
+++ b/jekyll-site-src/_css_src/components/_component-icons.scss
@@ -34,7 +34,7 @@ $icon-ids:
   'tooltip',
   ;
 
-.components.detail .article h1::before {
+.page--components.page--detail .article h1::before {
   content: '';
   display: block;
   width: 80px;
@@ -44,8 +44,8 @@ $icon-ids:
 }
 
 @each $icon-id in $icon-ids {
-  .components.detail .article.article--icon-#{$icon-id} h1::before,
-  .components .component-list-item--icon-#{$icon-id} > .component-list-item__link::before {
+  .page--components.page--detail .article.article--icon-#{$icon-id} h1::before,
+  .page--components .component-list-item--icon-#{$icon-id} > .component-list-item__link::before {
     background-image: url('/images/component_icons/ic_#{$icon-id}_24px.svg');
   }
 }
