--- a/jekyll-site-src/_layouts/homepage.html
+++ b/jekyll-site-src/_layouts/homepage.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html class="mdc-typography">
   {% include head.html %}
-  <body id="homepage" class="mdc-typography">
+  <body class="page page--homepage">
     {% include toolbar.html
         title="Material Components"
         title_link="../"
         no_shadow=true %}
-    {% include welcome.html %}
 
-    <div class="page-content">
-      <article class="article">
-        {{ content }}
-      </article>
+    <div class="page__flex-element">
+      {% include welcome.html %}
+      <div class="page__content">
+        <article class="article">
+          {{ content }}
+        </article>
+      </div>
     </div>
 
     {% include footer.html %}
