--- a/jekyll-site-src/_layouts/landing.html
+++ b/jekyll-site-src/_layouts/landing.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html class="mdc-typography">
   {% include head.html %}
-  <body class="{{ page.layout }} {{ page.section }} mdc-typography">
+  <body class="page page--landing page--{{ page.section }}">
     {% include toolbar.html title=page.site_title no_shadow=true %}
 
-    <div class="page-content">
+    <div class="page__content page__flex-element">
       {% include drawer.html %}
       <article class="article">
         {{ content }}
