--- a/jekyll-site-src/_layouts/root-homepage.html
+++ b/jekyll-site-src/_layouts/root-homepage.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html class="mdc-typography">
   {% include head.html %}
-  <body class="root-homepage mdc-typography">
+  <body class="page page--root-homepage">
     {% include toolbar.html
         title="Material Design"
         title_link="/"
         logo="material-logo.svg"
         no_shadow=true
         is_root=true %}
-    {% include welcome.html is_root=true %}
-    <div class="page-content page-content--dense root-homepage__content">
-      {{ content }}
+
+    <div class="page__flex-element">
+      {% include welcome.html is_root=true %}
+      <div class="page__content page__content--dense">
+        {{ content }}
+      </div>
     </div>
+
     {% include footer.html is_dense=true %}
     {% include frontend-templates.html %}
     {% include scripts.html %}
