--- a/jekyll-site-src/_css_src/_constants.scss
+++ b/jekyll-site-src/_css_src/_constants.scss
@@ -10,6 +10,7 @@ $brown-400: #8d6e63;
 $green-a700: #00c853;
 $grey-50: #fafafa;
 $grey-100: #f5f5f5;
+$grey-200: #eee;
 $grey-300: #e0e0e0;
 $grey-400: #bdbdbd;
 $grey-600: #757575;
