--- a/jekyll-site-src/_css_src/components/_article.scss
+++ b/jekyll-site-src/_css_src/components/_article.scss
@@ -55,29 +55,23 @@
     margin: 8px 0 32px;
   }
 
+  th,
+  td {
+    border: 1px solid $grey-200;
+    padding: 12px 12px 12px 24px;
+  }
+
   th {
+    background: $grey-50;
     color: $black-54;
     font-weight: 500;
-    padding: 18px 0;
     text-align: left;
   }
 
   td {
-    padding: 14px 0;
-    border-top: 1px solid $grey-300;
-
     &:first-child code {
       background: 0;
     }
-
-    &:last-child {
-      padding-right: 24px;
-    }
-  }
-
-  th + th,
-  td + td {
-    padding-left: 56px;
   }
 
   // Screenshots/videos
