--- a/jekyll-site-src/_css_src/components/_article.scss
+++ b/jekyll-site-src/_css_src/components/_article.scss
@@ -1,6 +1,8 @@
 .article {
   @include mdc-typography(body1);
 
+  max-width: 760px;
+
   h1 {
     // See _component-icons.scss for additional mutations in component pages.
     @include mdc-typography(headline);
@@ -9,25 +11,25 @@
 
   h2 {
     @include mdc-typography(subheading2);
-    font-size: 20px;
-    margin: 24px 0 12px;
+    font-size: 1.25rem;
+    margin: 24px 0;
   }
 
   h3 {
     @include mdc-typography(subheading2);
     font-weight: 500;
-    margin: 24px 0;
+    margin: 24px 0 0;
   }
 
   h4 {
     @include mdc-typography(subheading2);
-    margin: 20px 0 12px;
+    margin: 20px 0 0;
   }
 
   h5 {
     @include mdc-typography(body2);
     font-weight: 500;
-    margin: 20px 0 12px;
+    margin: 20px 0 0;
   }
 
   h6 {
@@ -48,6 +50,13 @@
 
   p {
     margin: 16px 0;
+  }
+
+  h2 + p,
+  h3 + p,
+  h4 + p,
+  h5 + p {
+    margin-top: 4px;
   }
 
   // Data table
@@ -73,6 +82,10 @@
     &:first-child code {
       background: 0;
     }
+  }
+
+  &--full-width {
+    max-width: 100%;
   }
 
   // Screenshots/videos
