Moves the footer to below the fold.

--- a/jekyll-site-src/_css_src/_constants.scss
+++ b/jekyll-site-src/_css_src/_constants.scss
@@ -31,6 +31,9 @@ $content-width: 1280px;
 $toolbar-height: 72px;
 $ui-font-family: 'Roboto Mono';
 
+$footer-height: 192px;
+$mobile-footer-height: 114px;
+
 // MDC overrides
 $mdc-theme-primary: $accent-color;
 $mdc-theme-accent: $accent-color;
