--- a/jekyll-site-src/_css_src/components/_page.scss
+++ b/jekyll-site-src/_css_src/components/_page.scss
@@ -3,7 +3,7 @@
 
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  min-height: calc(100vh + #{$footer-height});
 
   &__content {
     @include content-element;
@@ -42,5 +42,9 @@
         }
       }
     }
+  }
+
+  @include media-phone {
+    min-height: calc(100vh + #{$mobile-footer-height});
   }
 }
