--- a/jekyll-site-src/_includes/drawer.html
+++ b/jekyll-site-src/_includes/drawer.html
@@ -1,4 +1,4 @@
-<nav class="mdc-permanent-drawer">
+<nav class="page__drawer mdc-permanent-drawer">
   <ul class="drawer-list">
     {% for nav_item in page.navigation %}
       {% include drawer-nav-item.html nav_item=nav_item %}
