--- a/jekyll-site-src/_layouts/landing-no-drawer.html
+++ b/jekyll-site-src/_layouts/landing-no-drawer.html
@@ -5,7 +5,7 @@
     {% include toolbar.html title=page.site_title %}
 
     <div class="page__content page__flex-element">
-      <article class="article article--full-width">
+      <article class="page__article article article--full-width">
         {{ content }}
       </article>
     </div>
