--- a/jekyll-site-src/_layouts/landing.html
+++ b/jekyll-site-src/_layouts/landing.html
@@ -6,7 +6,7 @@
 
     <div class="page__content page__flex-element">
       {% include drawer.html %}
-      <article class="article">
+      <article class="page__article article">
         {{ content }}
       </article>
     </div>
