--- a/jekyll-site-src/_layouts/detail.html
+++ b/jekyll-site-src/_layouts/detail.html
@@ -13,6 +13,7 @@
 
     {% include footer.html %}
     {% include frontend-templates.html %}
+    {% include feedback.html %}
     {% include scripts.html %}
   </body>
 </html>
