Makes the feedback button more accessible.
Ditches the img element, adds an aria label.

--- a/jekyll-site-src/_css_src/components/_feedback.scss
+++ b/jekyll-site-src/_css_src/components/_feedback.scss
@@ -7,7 +7,7 @@
   height: 48px;
   padding: 0;
 
-  background: none;
+  background: center/24px url('/images/icons/ic_feedback_24px.svg') no-repeat;
   border: none;
   opacity: 0.54;
 }
