--- a/jekyll-site-src/_includes/feedback.html
+++ b/jekyll-site-src/_includes/feedback.html
@@ -1,3 +1,5 @@
-<button class="feedback-button">
-  <img src="/images/icons/ic_feedback_24px.svg" width="24" height="24">
+<button
+    class="feedback-button"
+    aria-label="Send Feedback"
+    tabindex="0">
 </button>
