--- a/jekyll-site-src/_includes/footer.html
+++ b/jekyll-site-src/_includes/footer.html
@@ -9,6 +9,14 @@
       <li>
         <a class="footer__link" href="https://www.google.com/intl/en/policies/terms/" target="_blank">Privacy &amp; Terms</a>
       </li>
+      <li class="footer__link-container footer__link-container--right">
+        <a class="footer__made-with-desktop-link footer__link" href="https://material.io/components/web">
+          Made with Material Components for the Web
+        </a>
+        <a class="footer__made-with-mobile-link footer__link" href="https://material.io/components/web">
+          Made with MDC Web
+        </a>
+      </li>
     </ul>
   </div>
 </footer>
