--- a/jekyll-site-src/_css_src/components/_page.scss
+++ b/jekyll-site-src/_css_src/components/_page.scss
@@ -76,5 +76,11 @@
     &__drawer + &__article {
       width: 100%;
     }
+
+    &--homepage {
+      #{$component}__content {
+        margin-top: 24px;
+      }
+    }
   }
 }
